--- a/Merge pdfs.tex
+++ b/Merge pdfs.tex
@@ -1,9 +1,9 @@
 \documentclass{article}% or something else
 \usepackage{pdfpages}
 \begin{document}
-\includepdf[pages=-]{TravelGrant-CHASE.pdf}
-\includepdf[pages=-]{CV-Reza_Sadeghi.pdf}
-\includepdf[pages=-]{TravelGrant-CHASE-letter.pdf}
-\includepdf[pages=-]{Notification.pdf}
+\includepdf[pages=-]{1.pdf}
+\includepdf[pages=-]{2.pdf}
+\includepdf[pages=-]{3.pdf}
+\includepdf[pages=-]{4.pdf}
 
 \end{document}
